--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "rules": {
         "comma-dangle": ["error", "always-multiline"],
         "import/no-anonymous-default-export": 0,
-        "semi": ["error", "always"]
+        "semi": ["error", "always"],
+        "import/prefer-default-export": "off"
     }
 }
